--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,27 @@
 *.class
-*.iml
-*.ipr
-*.iws
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+# Gradlew #
+build/
+*.launch
 *.classpath
 *.project
-*.launch
-*.psd
-*.DS_Store
-/output
+*.factorypath
+bin/
+run/
+.settings/
+/.apt_generated/
+/.apt_generated_tests/
+/Users/
 
-#ForgeGradle
-/build
-/.gradle
-/eclipse/assets
-/eclipse/.metadata
-/libs
-/bin/
-/run/
-/out/
-/classes/
-
-\.idea/
+!/gradle/wrapper/gradle-wrapper.jar
