--- a/gradle.properties
+++ b/gradle.properties
@@ -1,20 +1,11 @@
-group = com.tarinoita.solsweetpotato
-archivesBaseName = solsweetpotato
-name = Spice of Life: Sweet Potato Edition
-description = A mod designed to encourage dietary variety by rewarding the player with customizable benefits depending on how diverse their diet is.
+mod_name=Spice of Life: Sweet Potato Edition
+mod_id=solsweetpotato
+mod_authors=tarinoita, CreativeMD
+mod_description=A mod designed to encourage dietary variety by rewarding the player with customizable benefits depending on how diverse their diet is.
+mod_version=2.2.0
+mod_display_url=https://modrinth.com/mod/
+github_project=CreativeMD/Spice-of-Life-Sweet-Potato
+creativecore_version=2.11.0
 
-minecraft_version = 1.19.2
-
-mod_version = 2.2.0
-
-origins_file = 3941983
-
-#ForgeGradle version to use (Required)
-fg_version = 5.+
-#Forge version to use (Required)
-forge_version = 1.19.2-43.0.0
-#Mappings version to use (Required)
-mappings_channel = official
-# Simply re-run your setup task after changing the mappings to update your workspace.
-
-org.gradle.logging.level=info
+org.gradle.jvmargs=-Xmx5G
+org.gradle.daemon=false
