--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,38 +1,34 @@
-# The name of the mod loader type to load - for regular FML @Mod mods it should be javafml
-modLoader = "javafml"
-# A version range to match for said mod loader - for regular FML @Mod it will be the forge version
-loaderVersion = "[43,)"
-
-issueTrackerURL = "https://github.com/tarinoita/Spice-of-Life-Sweet-Potato-Edition/issues"
-displayURL = "https://www.curseforge.com/minecraft/mc-mods/spice-of-life-sweet-potato-edition"
-logoFile = "logo 160.png"
-license = "LGPL-2.1"
-credits = "Kevun1, creator of Spice of Life: Potato Edition, and the Spice of Life: Carrot Edition team, which that project was forked from."
-authors = "tarinoita"
+modLoader="javafml"
+loaderVersion="${loader_version_range}"
+issueTrackerURL="https://github.com/${github_project}/issues"
+license="${mod_license}"
 
 [[mods]]
-	modId = "solsweetpotato"
-	version = "${file.jarVersion}"
-	displayName = "Spice of Life: Sweet Potato Edition"
-	description = '''
-A mod designed to encourage dietary variety!
+    modId="${mod_id}"
+    logoFile="${mod_id}.png"
+    version="${mod_version}"
+    displayName="${mod_name}"
+    displayURL="${mod_display_url}"
+    authors="${mod_authors}"
+    description='''${mod_description}'''
+    
+[[dependencies.${mod_id}]]
+    modId="forge"
+    mandatory=true
+    versionRange="${forge_version_range}"
+    ordering="NONE"
+    side="BOTH"
 
-It does so by rewarding the player with customizable benefits depending on how diverse their diet is. These benefits
-require maintaining a diverse diet, rather than a one-time consumption.
-Instead of using the carrot, we use the (sweet) potato! Whatever that means...
-'''
-
-# Dependencies are optional.
-[[dependencies]]
-	modId = "forge"
-	mandatory = true
-	versionRange = "[43,)"
-	ordering = "NONE" # BEFORE or AFTER required if the relationship is not mandatory
-	side = "BOTH" # BOTH, CLIENT or SERVER
-
-[[dependencies]]
-	modId = "minecraft"
-	mandatory = true
-	versionRange = "[1.19.2, )"
-	ordering = "NONE"
-	side = "BOTH"
+[[dependencies.${mod_id}]]
+    modId="minecraft"
+    mandatory=true
+    versionRange="${minecraft_version_range}"
+    ordering="NONE"
+    side="BOTH"
+    
+[[dependencies.${mod_id}]]
+    modId="creativecore"
+    mandatory=true
+    ordering="NONE"
+    side="BOTH"
+    versionRange="${creativecore_version}"
