--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-mod_name=Spice of Life: Sweet Potato Edition
+mod_name=Spice of Life Sweet Potato Edition
 mod_id=solsweetpotato
 mod_authors=tarinoita, CreativeMD
 mod_description=A mod designed to encourage dietary variety by rewarding the player with customizable benefits depending on how diverse their diet is.
