--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,9 @@
-mod_name=Spice of Life Sweet Onion
+mod_name=Spice of Life Onion
+mod_file_name=SoLOnion
 mod_id=solonion
 mod_authors=tarinoita, CreativeMD
 mod_description=A mod designed to encourage dietary variety by rewarding the player with customizable benefits depending on how diverse their diet is.
-mod_version=2.2.0
+mod_version=1.0.0
 mod_display_url=https://modrinth.com/mod/
 github_project=CreativeMD/Spice-of-Life-Onion
 creativecore_version=2.11.0
