--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,11 @@ mod_id=solonion
 mod_authors=tarinoita, CreativeMD
 mod_description=A mod designed to encourage dietary variety by rewarding the player with customizable benefits depending on how diverse their diet is.
 mod_version=1.1.3
-mod_display_url=https://modrinth.com/mod/
+mod_display_url=https://modrinth.com/mod/spice-of-life-onion
+release_type=release
 github_project=CreativeMD/Spice-of-Life-Onion
 creativecore_version=2.11.5
+curse_id=878047
 
 org.gradle.jvmargs=-Xmx5G
 org.gradle.daemon=false
