--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,7 @@ release_type=release
 github_project=CreativeMD/Spice-of-Life-Onion
 creativecore_version=2.11.5
 curse_id=878047
+modrinth_id=spice-of-life-onion
 
 org.gradle.jvmargs=-Xmx5G
 org.gradle.daemon=false
