--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,5 @@
 modLoader="javafml"
-loaderVersion="[46,)"
+loaderVersion="[1,)"
 issueTrackerURL="https://github.com/CreativeMD/Spice-of-Life-Onion/issues"
 license="LGPL-3.0-only"
 
@@ -13,16 +13,16 @@ license="LGPL-3.0-only"
     description='''A mod designed to encourage dietary variety by rewarding the player with customizable benefits depending on how diverse their diet is.'''
 
 [[dependencies.solonion]]
-    modId="forge"
-    mandatory=true
-    versionRange="[46,)"
+    modId="neoforge"
+    type="required"
+    versionRange="[20.4,)"
     ordering="NONE"
     side="BOTH"
 
 [[dependencies.solonion]]
     modId="minecraft"
-    mandatory=true
-    versionRange="[1.20,1.21)"
+    type="required"
+    versionRange="[1.20.4,1.21)"
     ordering="NONE"
     side="BOTH"
 
@@ -31,5 +31,11 @@ license="LGPL-3.0-only"
    mandatory=true
    ordering="NONE"
    side="BOTH"
-   versionRange="2.11.14"
+   versionRange="[2.11.14,)"
+
+[[mixins]]
+   config="["
+
+[[mixins]]
+   config="]"
 
