--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,11 @@ plugins {
     id 'eclipse'
     id 'idea'
     id 'com.modrinth.minotaur' version '2.+'
-    id 'com.matthewprenger.cursegradle' version '1.4+'
     id 'net.neoforged.gradle.userdev' version '7.0.+'
+}
+
+repositories {
+    maven { url = 'https://maven.fabricmc.net' }
 }
 
 group= "team.creative" + project.mod_id
@@ -32,6 +35,8 @@ dependencies {
     implementation "net.neoforged:neoforge:${forge_version}"
     
     implementation project(':CreativeCore')
+    
+    compileOnly "net.fabricmc:fabric-loader:${fabric_version}"
 }
 
 modDependencies = [
